# psuffix-trees

./: README  README.md  pyproject.toml  setup.py
pypst/: __init__.py  pst_learn.py  test_example_trees.py  test_transition_mat.py  transition_mat.py  wrapper.py
pypst/fixtures/: output_symbols.json  output_tree.json
