[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psuffix-trees"
version = "1.0.0"
description = "A Python port of the Matlab probabilistic suffix trees and automata library by Markowitz"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Russell McLoughlin", email = "russ.mcl@gmail.com"}
]

keywords = ["pst", "probabilistic suffix trees", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/rmcl/psuffix-trees"

[tool.setuptools.packages.find]
include = ["pypst"]

dependencies = [
    "numpy>=1.21",
]
